# borer

./: Cargo.toml  Makefile  README.md  docker-compose.yml
crates/borer-client/: Cargo.toml
crates/borer-client/src/: agent.rs  cli.rs  config.rs  main.rs  proxy.rs  tunnel.rs
crates/borer-core/: Cargo.toml
crates/borer-core/src/: error.rs  lib.rs  protocol.rs
crates/borer-http/: Cargo.toml
crates/borer-http/src/: lib.rs
crates/borer-server/: .dev.env  Cargo.toml
crates/borer-server/migrations/: 0001_create_clients_and_tokens.sql
crates/borer-server/src/: config.rs  main.rs  router.rs  state.rs  types.rs
crates/borer-server/src/auth/: mod.rs  models.rs  queries.rs  service.rs
crates/borer-server/src/routes/: auth.rs  mod.rs  proxy.rs  utils.rs  ws.rs
crates/borer-server/static/: index.html
docker/: migrations.Dockerfile  server.Dockerfile
