[package]
name = "borer"
version = "0.1.0"
edition = "2024"

[dependencies]
borer-core = { path = "../borer-core" }
tokio = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
futures = "0.3.31"
tokio-tungstenite = { version = "0.28.0", features = ["rustls-tls-webpki-roots"] }
tungstenite = "0.28.0"
url = "2.5.7"
reqwest = "0.13.1"
anyhow = "1.0.100"
clap = { version = "4.5.54", features = ["derive"] }
toml = "0.9.11+spec-1.1.0"