[package]
name = "borerd"
version = "0.1.0"
edition = "2024"


[dependencies]
borer-core = { path = "../borer-core" }
axum = { version = "0.8.8", features = ["ws"] }
tokio = { workspace = true }
serde = { workspace = true }
futures = "0.3.31"
uuid = { version = "1.19.0", features = ["serde", "v4"] }
bytes = "1.11.0"
rand = "0.9.2"
config = "0.15.19"
chrono = { version = "0.4.42", features = ["serde"] }
sqlx = { version = "0.8.6", features = [
    "runtime-tokio",
    "postgres",
    "uuid",
    "chrono",
    "macros"
] }
anyhow = "1.0.100"
hex = "0.4.3"
dotenv = "0.15.0"

